1.1
===

 * Apply magic id to all resources when not in debug mode, so invalidation
   works.
   [fschulze]

 * Made skin aware.
   [ldr]

1.0.5
=====

 * Fixed encoding of javascripts.
   [fschulze]

1.0.4
=====

 * Fixed reordering of resources with javascript.
   [fschulze]

1.0.3
=====

 * Fixed typo in the migration external method which lead to portal_javascripts
   not being migrated.
   [fschulze]

 * Small fixes to UI.
   [limi]

1.0.2
=====

 * Fix for bug #4392, where merging FSfiles could mess up http-status headers
   and cause weird hanging in browsers.
   [plonista][fschulze][elvix] 

1.0.1
=====

 * Don't filter resources in merged overview in ZMI.
   [fschulze]

 * Improved management UI.
   [limi, fschulze]

 * Fixed reinstall bug due to improper resource id lookup.
   [alecm]

1.0
===

 * Moved directory with skin layer for Plone 2.0.5 compatibility to product
   root, so it doesn't interfere with Plone 2.1. The version check on install
   time didn't seem to be enough.
   [fschulze]

 * getTitle and getMedia will return None now if they are empty, this removes
   empty title and media attributes from the generated HTML.

 * Fixed reordering of resources in ZMI when javascript is enabled.
   [fschulze, jenner]

 * Fixed submitting changes in ZMI for stylesheets on IE.
   [fschulze]

0.95
====

 * Added getResource function. This allows to change properties of each
   resource. After that, a call to cookResources is needed.
   [fschulze]

 * Added getResourceIds function.
   [fschulze]

 * Added test for context dependancy to inline css rendering.
   [dom]

 * Now uses restrictedTraverse() rather than getattr() for returning resources,
   to provide support for resources held within the ZODB.
   [dom]

 * Added a "is merging allowed?" option ("cookable" property) to determine where
   a resource can be merged (default True). This was added because objects in
   the ZODB may have variable permissions but be merged together. Whilst the