@@ -1,6 +1,10 @@
 1.1
 ===
 
+ * Made registries cacheable. This is most useful with the RAMCacheManager.
+   Just associate portal_css and portal_javascripts with the RAMCache.
+   [fschulze]
+
  * Apply magic id to all resources when not in debug mode, so invalidation
    works.
    [fschulze]
